<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tour Manager</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign__in">Sign In</string>
    <string name="title_activity_sign__up">Sign Up</string>
    <string name="title_activity_welcome">WELCOME</string>
    <string name="title_activity_create_tour">Create Tour</string>
    <string name="title_activity_update_tour">Update Tour</string>
    
    <string name="title_activity_chat__box">CHATBOX</string>
    <string name="title_activity_member">Members</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="title_repassword">Re-type</string>
    <string name="title_fullname">Full Name</string>
    <string name="title_signup">Don\'t have any account? Sign up now!</string>
    <string name="title_signup_btn">Sign Up</string>
    <string name="title_signin">Sign In</string>
    <string name="title_signout">Sign Out</string>
    <string name="title_send">Send</string>
    <string name="title_back">Back</string>
    <string name="title_hello">Hello</string>
    <string name="action_search">Search</string>
    <string name="action_create_tour">Create tour</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="action_invite_member">Invite member</string>
    <string name="action_update_tour">Update tour</string>
    <string name="action_clear_tour">Clear Tours</string>

</resources>