<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/tour_action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/tour_action_new"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_create_tour"
        />
    <item
        android:id="@+id/tour_action_update"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_update_tour"
        />
    <item
        android:id="@+id/tour_action_clear"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_clear_tour"
        />

</menu>